# GPU_distributed_linear_equations_system

./: .gitignore  Nowy Arkusz programu Microsoft Excel.xlsx  README.md  client.cpp  generate.py  outputFile.txt  temp_client.py  test_client.py
Client_GPU_sample_computation/: CMakeLists.txt  hello.exp  hello.lib  main.cu  main2.cu
Client_windows_version/: .gitignore  Client_windows_version.sln  README.md  client.cpp  outputFile.txt  singleton_vector.h  web_socket_client.cpp  web_socket_client.h
Client_windows_version/Cuda/: Determinant_with_CUDA.cu-178815192.deps  (+5 more)
Determinant_calculation_with_CUDA/: Determinant_calculation_with_CUDA.cu  Determinant_calculation_with_CUDA.sln  Determinant_calculation_with_CUDA.vcxproj  Determinant_calculation_with_CUDA.vcxproj.filters  Determinant_calculation_with_CUDA2.cpp  Determinant_with_CUDA.cu  File.cu  Utilities.cu  Utilities.cuh  cuda_kernel.cu  data0.txt  data37.h5  temp.h5  test.txt
client/: .gitignore  CMakeLists.txt  README.md  client.cpp  singleton_vector.h  web_socket_client.cpp  web_socket_client.h
data/: data0.h5  data0.txt  data1.h5  data1.txt  data10.h5  data10.txt  data11.h5  data11.txt  data12.h5  data12.txt  data13.h5  data13.txt  data14.h5  data14.txt  data15.h5  data15.txt  data16.h5  data16.txt  data17.h5  data17.txt  data18.h5  data18.txt  data19.h5  data19.txt  data2.h5  data2.txt  data20.h5  data20.txt  data21.h5  data21.txt  data22.h5  data22.txt  data23.h5  data23.txt  data24.h5  data24.txt  data25.h5  data25.txt  data26.h5  data26.txt  (+160 more)
gpu_testing/: GPU.ipynb
server/: .gitignore  Pipfile  index.py
(+11 files in other folders)
